--- a/Project1/Makefile
+++ b/Project1/Makefile
@@ -1,10 +1,13 @@
 CC = gcc
 CFLAGS = -Wall -O2
 
-all: Project1
+all: Project1 genRandomVals
 
 Project1: Project1.c
 	$(CC) $(CFLAGS) -o Project1 -c Project1.c
+
+genRandomVals: genRandomVals.c
+	$(CC) $(CFLAGS) -o genRandomVals -c genRandomVals.c
 
 clean:
 	rm Project1
