Finished random file generation for Project1

--- a/Project1/Makefile
+++ b/Project1/Makefile
@@ -4,10 +4,12 @@ CFLAGS = -Wall -O2
 all: Project1 genRandomVals
 
 Project1: Project1.c
-	$(CC) $(CFLAGS) -o Project1 -c Project1.c
+	$(CC) $(CFLAGS) Project1.c -o Project1
+	chmod +x Project1
 
 genRandomVals: genRandomVals.c
-	$(CC) $(CFLAGS) -o genRandomVals -c genRandomVals.c
+	$(CC) $(CFLAGS) genRandomVals.c -o genRandomVals 
+	chmod +x genRandomVals
 
 clean:
-	rm Project1
+	rm Project1 genRandomVals
