--- a/HW4/Makefile
+++ b/HW4/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -Wall -O2
 
-all: HW4Q4 HW4Q5A HW4Q5A2 HW4Q5B
+all: HW4Q4 HW4Q5A HW4Q5A2
 
 HW4Q4: HW4Q4.c
 	$(CC) $(CFLAGS) HW4Q4.c -o HW4Q4
@@ -15,9 +15,5 @@ HW4Q5A2: HW4Q5A2.c
 	$(CC) $(CFLAGS) HW4Q5A2.c -o HW4Q5A2
 	chmod +x HW4Q5A2
 
-HW4Q5B: HW4Q5B.cpp
-	g++ $(CFLAGS) HW4Q5B.cpp -o HW4Q5B
-	chmod +x HW4Q5B
-
 clean:
-	rm HW4Q4 HW4Q5A HW4Q5A2 HW4Q5B
+	rm HW4Q4 HW4Q5A HW4Q5A2
